--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
-version: "3"
+version: "3.5"
 
 services:
 
   postgres:
     container_name: "postgres"
-    image: "postgres:12.1"
+    image: "postgres:latest"
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: pysysdb
+      POSTGRES_DB: erpdb
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin123
     volumes:
@@ -16,7 +16,7 @@ services:
 
   redis:
     container_name: "redis"
-    image: "redis:5.0.7"
+    image: "redis:latest"
     ports:
       - "6379:6379"
     volumes:
@@ -24,7 +24,7 @@ services:
 
   mongo:
     container_name: "mongo"
-    image: "mongo:4.0.12"
+    image: "mongo:latest"
     ports:
       - "27017:27017"
     environment:
@@ -51,7 +51,7 @@ services:
   pysys-challenge-app:
     container_name: "pysys-challenge-app"
     build: "./pysys-challenge-app"
-    command: "python -m flask run --host 0.0.0.0 --port 5000"
+    command: "python3 -m flask run --host=0.0.0.0 --port=5000"
     ports:
       - "5000:5000"
     depends_on:
@@ -63,4 +63,3 @@ volumes:
   postgres_vol:
   redis_vol:
   mongo_vol:
-
