--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,16 +48,16 @@ services:
     depends_on:
       - "nginx"
 
-  pysys-challenge-app:
-    container_name: "pysys-challenge-app"
-    build: "./pysys-challenge-app"
-    command: "python3 -m flask run --host=0.0.0.0 --port=5000"
-    ports:
-      - "5000:5000"
-    depends_on:
-      - postgres
-      - redis
-      - mongo
+#  pysys-challenge-app:
+#    container_name: "pysys-challenge-app"
+#    build: "./pysys-challenge-app"
+#    command: "python3 -m flask run --host=0.0.0.0 --port=5000"
+#    ports:
+#      - "5000:5000"
+#    depends_on:
+#      - postgres
+#      - redis
+#      - mongo
 
 volumes:
   postgres_vol:
