adjusting files are not working fine

--- a/docks/nginx/nginx.conf
+++ b/docks/nginx/nginx.conf
@@ -32,23 +32,23 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       8000;
         server_name  127.0.0.1;
 
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
-        location / {
-            root   /var/www/html;
-            index  index.html index.htm;
-        }
+        #location / {
+        #    root   /var/www/html;
+        #    index  index.html index.htm;
+        #}
 
         #error_page  404              /404.html;
 
-        #location / {
-        #    proxy_pass   http://pysys-challenge-web:8000;
-        #}
+        location / {
+            proxy_pass   http://pysys-challenge-web:4200;
+        }
 
         # redirect server error pages to the static page /50x.html
         #
