--- a/docks/nginx/nginx.conf
+++ b/docks/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
     #gzip  on;
 
     server {
-        listen       8000;
+        listen       80;
         server_name  127.0.0.1;
 
         #charset koi8-r;
@@ -47,16 +47,16 @@ http {
         #error_page  404              /404.html;
 
         location / {
-            proxy_pass   http://pysys-challenge-web:4200;
+            proxy_pass  http://pysys-challenge-web:4200;
         }
 
         # redirect server error pages to the static page /50x.html
         #
         
         error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /var/www/html;
-        }
+        #location = /50x.html {
+        #    root   /var/www/html;
+        #}
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
