adjusting files to make the shit run

--- a/docks/nginx/nginx.conf
+++ b/docks/nginx/nginx.conf
@@ -1,5 +1,5 @@
 #user  nobody;
-worker_processes  2;
+worker_processes  4;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -47,16 +47,16 @@ http {
         #error_page  404              /404.html;
 
         location / {
-            proxy_pass  http://pysys-challenge-web:4200;
+            proxy_pass http://pysys-challenge-web:4200;
         }
 
         # redirect server error pages to the static page /50x.html
         #
         
         error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-        #    root   /var/www/html;
-        #}
+        location = /50x.html {
+            root   /var/www/html;
+        }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
