--- a/pysys-challenge-app/requirements.txt
+++ b/pysys-challenge-app/requirements.txt
@@ -1,20 +1,19 @@
-pytz==2020.1
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.3
-Flask-Cors==3.0.8
-SQLAlchemy==1.3.17
-psycopg2-binary==2.8.5
-pymongo==3.10.1
-six==1.15.0
-mongoengine==0.20.0
-celery==4.4.5
-gevent==20.6.2
-Pillow==7.1.2
+pytz==2021.1
+Flask==2.0.1
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==2.5.1
+Django==3.2.4
+psycopg2-binary==2.9.1
+pymongo==3.11.4
+six==1.16.0
+mongoengine==0.23.1
+celery==5.1.1
+gevent==21.1.2
+Pillow==8.2.0
 redis==3.5.3
-aiohttp==3.6.2
-aioredis==1.3.1
-rabbitmq==0.2.0
-Numpy==1.18.5
-Scipy==1.4.1
-gunicorn==20.0.4
-requests==2.23.0
+django-redis==5.0.0
+kafka==1.3.5
+Numpy==1.20.3
+scipy==1.7.0
+gunicorn==20.1.0
+requests==2.25.1
