--- a/docks/nginx/nginx.conf
+++ b/docks/nginx/nginx.conf
@@ -46,9 +46,9 @@ http {
 
         #error_page  404              /404.html;
 
-        location / {
-            proxy_pass http://pysys-challenge-web:4200;
-        }
+        #location / {
+        #    proxy_pass http://pysys-challenge-web:4200;
+        #}
 
         # redirect server error pages to the static page /50x.html
         #
