--- a/docks/nginx/nginx.conf
+++ b/docks/nginx/nginx.conf
@@ -1,5 +1,5 @@
 #user  nobody;
-worker_processes  4;
+worker_processes  2;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -46,9 +46,10 @@ http {
 
         #error_page  404              /404.html;
 
-        #location / {
-        #    proxy_pass http://pysys-challenge-web:4200;
-        #}
+        location / {
+            proxy_pass   http://pysys-challenge-web:4200;
+            proxy_set_header Host            $host;
+        }
 
         # redirect server error pages to the static page /50x.html
         #
